@@ -152,21 +152,27 @@ public class User extends DataUnit implements Cloneable {
 		if (this.group.equalsIgnoreCase(subGroup.getName())) {
 			return false;
 		}
+		// User already has this subgroup
+		if (containsSubGroup(subGroup))
+			return false;
+		
+		// If the group doesn't exists add it
 		if (!this.getDataSource().groupExists(subGroup.getName())) {
 			getDataSource().addGroup(subGroup);
-			
-			flagAsChanged();
-			if (GroupManager.isLoaded()) {
-				if (!GroupManager.BukkitPermissions.isPlayer_join())
-					GroupManager.BukkitPermissions.updatePlayer(getBukkitPlayer());
-				GroupManagerEventHandler.callEvent(this, Action.USER_SUBGROUP_CHANGED);
-			}
-			return true;
 		}
+		
+		subGroups.add(subGroup.getName());
+		flagAsChanged();
+		if (GroupManager.isLoaded()) {
+			if (!GroupManager.BukkitPermissions.isPlayer_join())
+				GroupManager.BukkitPermissions.updatePlayer(getBukkitPlayer());
+			GroupManagerEventHandler.callEvent(this, Action.USER_SUBGROUP_CHANGED);
+		}
+		return true;
+			
 		//subGroup = getDataSource().getGroup(subGroup.getName());
 		//removeSubGroup(subGroup);
 		//subGroups.add(subGroup.getName());
-		return false;
 	}
 
 	public int subGroupsSize() {
